// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test step direction prop 1`] = `
"<div class=\\"smy-steps smy-steps--horizontal\\">
  <div class=\\"smy-step smy-step--finish\\">
    <div class=\\"smy-step__header\\">
      <div class=\\"smy-step__header-line\\"></div>
      <div class=\\"smy-step__header-icon\\">
        <div class=\\"smy-step__header-icon-seq\\">0</div>
      </div>
    </div>
    <div class=\\"smy-step__main\\">
      <div class=\\"smy-step__main-title\\"></div>
      <div class=\\"smy-step__main-content\\">步骤1</div>
    </div>
  </div>
  <div class=\\"smy-step smy-step--finish\\">
    <div class=\\"smy-step__header\\">
      <div class=\\"smy-step__header-line\\"></div>
      <div class=\\"smy-step__header-icon\\">
        <div class=\\"smy-step__header-icon-seq\\">0</div>
      </div>
    </div>
    <div class=\\"smy-step__main\\">
      <div class=\\"smy-step__main-title\\"></div>
      <div class=\\"smy-step__main-content\\">步骤2</div>
    </div>
  </div>
</div>"
`;

exports[`test step direction prop 2`] = `
"<div class=\\"smy-steps smy-steps--vertical\\">
  <div class=\\"smy-step smy-step--process\\">
    <div class=\\"smy-step__header\\">
      <div class=\\"smy-step__header-line\\"></div>
      <div class=\\"smy-step__header-icon\\">
        <div class=\\"smy-step__header-icon-seq\\">1</div>
      </div>
    </div>
    <div class=\\"smy-step__main\\">
      <div class=\\"smy-step__main-title\\"></div>
      <div class=\\"smy-step__main-content\\">步骤1</div>
    </div>
  </div>
  <div class=\\"smy-step smy-step--wait\\">
    <div class=\\"smy-step__header\\">
      <div class=\\"smy-step__header-line\\"></div>
      <div class=\\"smy-step__header-icon\\">
        <div class=\\"smy-step__header-icon-seq\\">2</div>
      </div>
    </div>
    <div class=\\"smy-step__main\\">
      <div class=\\"smy-step__main-title\\"></div>
      <div class=\\"smy-step__main-content\\">步骤2</div>
    </div>
  </div>
</div>"
`;

exports[`test step event 1`] = `
"<div class=\\"smy-steps smy-steps--horizontal\\">
  <div class=\\"smy-step smy-step--finish\\">
    <div class=\\"smy-step__header\\">
      <div class=\\"smy-step__header-line\\"></div>
      <div class=\\"smy-step__header-icon\\">
        <div class=\\"smy-step__header-icon-seq\\">0</div>
      </div>
    </div>
    <div class=\\"smy-step__main\\">
      <div class=\\"smy-step__main-title\\"></div>
      <div class=\\"smy-step__main-content\\">步骤1</div>
    </div>
  </div>
  <div class=\\"smy-step smy-step--finish\\">
    <div class=\\"smy-step__header\\">
      <div class=\\"smy-step__header-line\\"></div>
      <div class=\\"smy-step__header-icon\\">
        <div class=\\"smy-step__header-icon-seq\\">0</div>
      </div>
    </div>
    <div class=\\"smy-step__main\\">
      <div class=\\"smy-step__main-title\\"></div>
      <div class=\\"smy-step__main-content\\">步骤2</div>
    </div>
  </div>
</div>"
`;

exports[`test steps example 1`] = `
"<div class=\\"steps-example\\">
  <div class=\\"app-demo-title\\">基础使用</div>
  <div class=\\"steps-wrapper smy-steps smy-steps--horizontal\\">
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon\\">
          <div class=\\"smy-step__header-icon-seq\\">0</div>
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\">已完成</div>
        <div class=\\"smy-step__main-content\\"><span>这里是该步骤的描述信息加长加长加长加长加长加长加长</span></div>
      </div>
    </div>
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon\\">
          <div class=\\"smy-step__header-icon-seq\\">0</div>
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <!---->
      </div>
    </div>
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon\\">
          <div class=\\"smy-step__header-icon-seq\\">0</div>
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <!---->
      </div>
    </div>
  </div>
  <div class=\\"steps-button\\"><button>下一步</button></div>
  <div class=\\"app-demo-title\\">基础使用(点状)</div>
  <div class=\\"steps-wrapper smy-steps smy-steps--dot smy-steps--horizontal\\">
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon smy-step__header-icon--dot\\">
          <!---->
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <!---->
      </div>
    </div>
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon smy-step__header-icon--dot\\">
          <!---->
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <!---->
      </div>
    </div>
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon smy-step__header-icon--dot\\">
          <!---->
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <!---->
      </div>
    </div>
  </div>
  <div class=\\"steps-button\\"><button>下一步</button></div>
  <div class=\\"app-demo-title\\">竖向</div>
  <div class=\\"steps-wrapper smy-steps smy-steps--vertical\\">
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon\\">
          <div class=\\"smy-step__header-icon-seq\\">0</div>
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\">已完成</div>
        <div class=\\"smy-step__main-content\\"><span>这里是该步骤的描述信息加长加长加长加长加长加长加长</span></div>
      </div>
    </div>
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon\\">
          <div class=\\"smy-step__header-icon-seq\\">0</div>
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <!---->
      </div>
    </div>
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon\\">
          <div class=\\"smy-step__header-icon-seq\\">0</div>
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <!---->
      </div>
    </div>
  </div>
  <div class=\\"steps-button\\"><button>下一步</button></div>
  <div class=\\"app-demo-title\\">点状</div>
  <div class=\\"steps-wrapper smy-steps smy-steps--dot smy-steps--vertical\\">
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon smy-step__header-icon--dot\\">
          <!---->
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\">已完成</div>
        <div class=\\"smy-step__main-content\\"><span>这里是该步骤的描述信息加长加长加长加长加长加长加长</span></div>
      </div>
    </div>
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon smy-step__header-icon--dot\\">
          <!---->
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <div class=\\"smy-step__main-content\\"><span>fasdfad</span></div>
      </div>
    </div>
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon smy-step__header-icon--dot\\">
          <!---->
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <div class=\\"smy-step__main-content\\"><span>fasdfad</span></div>
      </div>
    </div>
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon smy-step__header-icon--dot\\">
          <!---->
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <div class=\\"smy-step__main-content\\"><span>fasdfad</span></div>
      </div>
    </div>
  </div>
  <div class=\\"app-demo-title\\">翻转</div>
  <div class=\\"steps-wrapper smy-steps smy-steps--dot smy-steps--vertical\\">
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon smy-step__header-icon--dot\\">
          <!---->
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"><span>收货地址：广东省深圳市福田区梅林街道新一代产业园5栋</span></div>
        <div class=\\"smy-step__main-content\\">
          刘一飞 18889898888
        </div>
      </div>
    </div>
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon smy-step__header-icon--dot\\">
          <!---->
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <div class=\\"smy-step__main-content\\"><span>fasdfad</span></div>
      </div>
    </div>
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon smy-step__header-icon--dot\\">
          <!---->
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <div class=\\"smy-step__main-content\\"><span>fasdfad</span></div>
      </div>
    </div>
    <div class=\\"smy-step smy-step--finish\\">
      <div class=\\"smy-step__header\\">
        <div class=\\"smy-step__header-line\\"></div>
        <div class=\\"smy-step__header-icon smy-step__header-icon--dot\\">
          <!---->
        </div>
      </div>
      <div class=\\"smy-step__main\\">
        <div class=\\"smy-step__main-title\\"></div>
        <div class=\\"smy-step__main-content\\"><span>fasdfad</span></div>
      </div>
    </div>
  </div>
</div>"
`;
